[gd_scene load_steps=14 format=3 uid="uid://c8we5xh6j8dc7"]

[ext_resource type="Script" path="res://levels/level_spawn/level_spawn.gd" id="1_7c035"]
[ext_resource type="PackedScene" uid="uid://d0qn4n25hjihd" path="res://LevelBlocks/jumpbox.tscn" id="2_730q1"]
[ext_resource type="PackedScene" uid="uid://blw54ox33juq" path="res://LevelBlocks/coin.tscn" id="3_oecbq"]
[ext_resource type="PackedScene" uid="uid://d2o56q43c2fa7" path="res://LevelBlocks/skull.tscn" id="4_3l1wr"]
[ext_resource type="PackedScene" uid="uid://ds25ca0fs84f" path="res://LevelBlocks/platform.tscn" id="5_ccsrg"]
[ext_resource type="Shader" path="res://shaders/TV.gdshader" id="6_vcomq"]
[ext_resource type="PackedScene" uid="uid://ocryeli0i7dx" path="res://LevelBlocks/floor.tscn" id="7_etuq1"]
[ext_resource type="PackedScene" uid="uid://dg8yhobkc2qwa" path="res://PlayerModel/player.tscn" id="8_86ehr"]
[ext_resource type="PackedScene" uid="uid://5d0myasppyb8" path="res://LevelBlocks/gravity.tscn" id="9_jhso8"]
[ext_resource type="AudioStream" uid="uid://ce6tmwe4ijg8o" path="res://sapcelords.mp3" id="10_nqtsl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vuvf0"]
shader = ExtResource("6_vcomq")
shader_parameter/vertJerkOpt = 0.2
shader_parameter/vertMovementOpt = 0.0
shader_parameter/bottomStaticOpt = 0.0
shader_parameter/bottomStaticStrenth = 0.7
shader_parameter/scalinesOpt = 0.8
shader_parameter/rgbOffsetOpt = 0.2
shader_parameter/horzFuzzOpt = 0.15

[sub_resource type="SystemFont" id="SystemFont_cjlsw"]
font_names = PackedStringArray("GB18030 Bitmap")
subpixel_positioning = 0

[sub_resource type="Curve2D" id="Curve2D_ob63d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1142, 540, 0, 0, 0, 0, 1142, 540, 0, 0, 0, 0, 1155.99, 16, 0, 0, 0, 0, 1142, 540)
}
point_count = 4

[node name="Level1" type="Node2D"]
script = ExtResource("1_7c035")
box_scene = ExtResource("2_730q1")
coin_scene = ExtResource("3_oecbq")
skull_scene = ExtResource("4_3l1wr")
platform_scene = ExtResource("5_ccsrg")

[node name="Background" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_vuvf0")

[node name="Roof" parent="Background" instance=ExtResource("7_etuq1")]
visible = false
position = Vector2(-3, 0)
velocity_change = 100
is_floor = false
metadata/_edit_lock_ = true

[node name="top" type="ColorRect" parent="Background"]
offset_left = -20.0
offset_top = -12.0
offset_right = 1179.0
offset_bottom = 562.0
color = Color(0.024357, 1.75888e-05, 0.123784, 1)
metadata/_edit_lock_ = true

[node name="bottom" type="ColorRect" parent="Background"]
offset_left = -8.0
offset_top = 562.0
offset_right = 1170.0
offset_bottom = 670.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="floor" type="ColorRect" parent="Background"]
offset_left = -13.0
offset_top = 559.0
offset_right = 1152.0
offset_bottom = 562.0
color = Color(0.531574, 0.000203016, 0.53164, 1)
metadata/_edit_lock_ = true

[node name="Score" type="Label" parent="Background"]
visible = false
offset_left = 780.0
offset_top = 18.0
offset_right = 1143.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0.968627, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_cjlsw")
theme_override_font_sizes/font_size = 47
text = "012345"
horizontal_alignment = 2

[node name="DeadTimer" type="Timer" parent="Background"]
wait_time = 2.582
one_shot = true

[node name="DeadLabel" type="Label" parent="Background"]
visible = false
offset_left = 122.0
offset_top = 191.0
offset_right = 1049.0
offset_bottom = 468.0
theme_override_font_sizes/font_size = 203
text = "01232312"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Background/DeadLabel"]
layout_mode = 0
offset_left = 241.0
offset_top = -101.0
offset_right = 671.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0, 0.937255, 0, 1)
theme_override_font_sizes/font_size = 131
text = "SCORE"
horizontal_alignment = 1

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 1.05
autostart = true

[node name="PlatformTimer" type="Timer" parent="." groups=["box", "lvl_object"]]
wait_time = 5.801
autostart = true

[node name="BoxTimer" type="Timer" parent="."]
wait_time = 1.407
autostart = true

[node name="SkullTimer" type="Timer" parent="."]
wait_time = 3.829
autostart = true

[node name="BoxPath" type="Path2D" parent="."]
position = Vector2(-0.0133095, 0)
scale = Vector2(1.00089, 1)
curve = SubResource("Curve2D_ob63d")

[node name="PathFollow2D" type="PathFollow2D" parent="BoxPath"]
position = Vector2(1142, 540.094)

[node name="Player" parent="." instance=ExtResource("8_86ehr")]
position = Vector2(177, 69)
collision_layer = 3
collision_mask = 3

[node name="Gravity" parent="." instance=ExtResource("9_jhso8")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_nqtsl")
autoplay = true
parameters/looping = true

[connection signal="timeout" from="Background/DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
[connection signal="timeout" from="PlatformTimer" to="." method="_on_platform_timer_timeout"]
[connection signal="timeout" from="BoxTimer" to="." method="_on_box_timer_timeout"]
[connection signal="timeout" from="SkullTimer" to="." method="_on_skull_timer_timeout"]
[connection signal="sgnl_player_died" from="Player" to="." method="_on_player_sgnl_player_died"]
